--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -11,7 +11,7 @@
 <body>
 	<div id="contenedor">
 		<div id="contenedortabla">
-			<a href="/goformcreateproducto"><img src="./sources/img/plus.png" alt="createcliente"></a>
+			
 			<table>
 				<tr>
 					<th>ID PRODUCTO</th>
@@ -20,11 +20,12 @@
 					<th>NOMBRE</th>
 					<th>CANTIDAD</th>
 					<th>VALOR</th>
+					<th><a href="/goformcreateproducto"><img src="./sources/img/circle_plus_icon_255898.png" alt="createcliente"></a></th>
 				</tr>
 				<tbody id="tablaproducto">
 					<% if (dato.length>0) { %>
 						<% for( let index = 0; index < dato.length; index++ ) { %>
-							<tr><td><%=dato[index].id_producto %></td><td><%=dato[index].id_cat %></td><td><%= dato[index].id_prov %></td><td><%=dato[index].nombre %></td><td><%=dato[index].cantidad%></td><td><%=dato[index].valor%></td><td><a href="/goformupdateproducto/<%=dato[index].id_producto%>"><img src="./sources/img/edit.png" alt="update"></a></td><td><a href="/deleteproducto/<%=dato[index].id_producto%>"><img src="./sources/img/cross.png" alt="delete"></a></td></tr>
+							<tr><td><%=dato[index].id_producto %></td><td><%=dato[index].id_cat %></td><td><%= dato[index].id_prov %></td><td><%=dato[index].nombre %></td><td><%=dato[index].cantidad%></td><td><%=dato[index].valor%></td><td><a href="/goformupdateproducto/<%=dato[index].id_producto%>"><img src="./sources/img/edit_icon_255891.png" alt="update"></a></td><td><a href="/deleteproducto/<%=dato[index].id_producto%>"><img src="./sources/img/remove_delete_trash_icon_255976.png" alt="delete"></a></td></tr>
 						<% } %>
 					<% } %>
 				</tbody>
