--- a/views/salida.ejs
+++ b/views/salida.ejs
@@ -13,12 +13,14 @@
     </head>
     <body>
         <div id="contenedor">
+            
             <div id="contenedortabla">
                 <table>
                     <tr>
                         <th>ID SALIDA</th>
                         <th>ID CLIENTE</th>
                         <th>FECHA</th>
+                        <th><a href="/goformcreatecategoria"><img src="./sources/img/circle_plus_icon_255898.png" alt="goformcreatecategoria"></a></th>
                     </tr>
                     <tbody id="tablasalida">
                         <% if (dato.length>0) { %>
