--- a/views/cliente.ejs
+++ b/views/cliente.ejs
@@ -23,7 +23,7 @@
             <div id="contenedorcentrado">
             </div>
             <div id="contenedortabla">
-                <a href="/goformcreatecliente"><img src="./sources/img/plus.png" alt="createcliente"></a>
+                
                 <table>
                     <thead>
                         <tr>
@@ -31,12 +31,13 @@
                             <th>Nombre</th>
                             <th>Direccion</th>
                             <th>Telefono</th>
+                            <th><a href="/goformcreatecliente"><img src="./sources/img/circle_plus_icon_255898.png" alt="createcliente"></a></th>
                         </tr>
                     </thead>
                     <tbody id="tablacliente">
                         <% if (dato.length) { %>
                             <% for( let index = 0; index < dato.length; index++ ) { %>
-                            <tr><td><%=dato[index].id_cliente%></td><td><%=dato[index].nombre%></td><td><%= dato[index].Direccion %></td><td><%=dato[index].telefono %></td><td><a href="/goformupdatecliente/<%=dato[index].id_cliente%>"><img src="./sources/img/edit.png" alt="updatecliente"></a></td><td><a href="/deletecliente/<%=dato[index].id_cliente%>"><img src="./sources/img/cross.png" alt="deletecliente"></a></td></tr>
+                            <tr><td><%=dato[index].id_cliente%></td><td><%=dato[index].nombre%></td><td><%= dato[index].Direccion %></td><td><%=dato[index].telefono %></td><td><a href="/goformupdatecliente/<%=dato[index].id_cliente%>"><img src="./sources/img/edit_icon_255891.png" alt="updatecliente"></a></td><td><a href="/deletecliente/<%=dato[index].id_cliente%>"><img src="./sources/img/remove_delete_trash_icon_255976.png" alt="deletecliente"></a></td></tr>
                             <% } %>
                         <% } %>
                     </tbody>
