--- a/views/inicio_de_sesion.ejs
+++ b/views/inicio_de_sesion.ejs
@@ -1,59 +1,33 @@
-<!-- Define que el documento esta bajo el estandar de HTML 5 -->
-<!doctype html>
-
-<!-- Representa la raíz de un documento HTML o XHTML. Todos los demás elementos deben ser descendientes de este elemento. -->
-<html lang="es">
-    
-    <head>
-        
-        <meta charset="utf-8">
-        
-        <title>La Ceiba</title>    
-        
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
-        <meta name="author" content="Videojuegos & Desarrollo">
-        <meta name="description" content="Ejemplo de formulario de acceso basado en HTML5 y CSS">
-        <meta name="keywords" content="login,formulariode acceso html">
-        <link rel="shortcut icon" href="/sources/img/icons8-oak-tree-16.png" type="image/x-icon">
-        <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> 
-        
-        <!-- Link hacia el archivo de estilos css -->
-        <link rel="stylesheet" href="../sources/css/login.css">
-                
-    </head>
-    
-    <body>
-    
-        <div id="contenedor">
-            
-            <div id="contenedorcentrado">
-                <div id="login">
-                    <form id="loginform" action="/login">
-                        <label for="usuario">Usuario</label>
-                        <input id="usuario" type="number" name="usuar" placeholder="Usuario" required step="any">
-                        
-                        <label for="password">Contraseña</label>
-                        <input id="password" type="password" placeholder="Contraseña" name="passw" required>
-                        
-                        <input type="submit" value="Login">
-                    </form>
-                </div>
-                
-                <div id="derecho">
-                    <div class="titulo">
-                        Bienvenido
-                    </div>
-                    <hr>
-                    <div class="pie-form">
-                        <a href="#" >¿Perdiste tu contraseña?</a>
-                        <a href="#">¿No tienes Cuenta? Registrate</a>
-                        <hr>
-                        <a href="/">« Volver</a>
-                    </div>
-                </div>
-            </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>La Ceiba</title>
+    <link rel="shortcut icon" href="/sources/img/icons8-oak-tree-16.png" type="image/x-icon">
+    <link rel="stylesheet" href="./sources/css/astyle.css">
+</head>
+<body>
+    <div class="login-box">
+        <img class ="avatar" src="./sources/img/logo.png" alt ="logo de la ceiba">
+    </div>
+    <div class="box">
+        <form action="/login">
+            <h2>Bienvenido
+            </h2>
+            <div class="inputBox">
+            <input type="text" name="usuar" required>
+            <span>usuario</span>
+            <i></i>
         </div>
-        
-    </body>
+        <div class="inputBox">
+            <input type="password" name="passw" required>
+            <span>contraseña</span>
+            <i></i>
+        </div>
+        <input type="submit" value="Entrar">
+     </form>
+    </div>
+</body>
 </html>
