--- a/views/categorias.ejs
+++ b/views/categorias.ejs
@@ -1,20 +1,25 @@
-<!doctype html>
-<html lang="es">
-    <head>
-        <meta charset="utf-8">
-        <title>La Ceiba</title>    
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Videojuegos & Desarrollo">
-        <meta name="description" content="Ejemplo de formulario de acceso basado en HTML5 y CSS">
-        <meta name="keywords" content="login,formulariode acceso html">
-        <link rel="shortcut icon" href="/sources/img/icons8-oak-tree-16.png" type="image/x-icon">
-        <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="../sources/css/categorias.css">
-    </head>
-    <body>
-		<div id="contenedor">
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Page Title</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./sources/css/main.css'>
+    <script src='main.js'></script>
+</head>
+<body>
+    <section class="layout">
+        <div id="sidebar">
+            <nav id="menu">
+                <div class="login-box"><img class ="avatar" src="./sources/img/logo.png" alt ="logo de la ceiba"></div>
+                <ul><li><a href="/gousuario"><img class="icono" src="./sources/img/account_circle_user_icon_255531.png" alt="usuario">Usuarios</a></li></ul>
+                <ul><li><a href="/goproducto">Producto</a></li></ul>
+                <ul><li><a href="/gocategoria">Categoria</a></li></ul>
+            </nav>
+        </div>
+        <div class="body">
             <div id="contenedortabla">
-                
                 <table>
                     <tr>
                         <th>ID</th>
@@ -25,12 +30,14 @@
                     <tbody id="tablacategoria">
                         <% if (dato.length>0) { %>
                             <% for( let index = 0; index < dato.length; index++ ) { %>
-                                <tr><td><%=dato[index].id_cat%></td><td><%=dato[index].nombre%></td><td><%= dato[index].Descripcion %></td><td><a href="/goformupdatecategoria/<%=dato[index].id_cat%>"><img src="./sources/img/edit_icon_255891.png" alt="updatecategoria"></a></td><td><a href="/deletecategoria/<%=dato[index].id_cat%>"><img src="./sources/img/remove_delete_trash_icon_255976.png" alt="deletecategoria"></a></td></tr>
+                                <tr><td><%=dato[index].id_cat%></td><td><%=dato[index].nombre%></td><td><%= dato[index].Descripcion %></td><td><a class="edit" href="/goformupdatecategoria/<%=dato[index].id_cat%>"><img src="./sources/img/edit_icon_255891.png" alt="updatecategoria"></a><a class="edit" href="/deletecategoria/<%=dato[index].id_cat%>"><img src="./sources/img/remove_delete_trash_icon_255976.png" alt="deletecategoria"></a></td></tr>
                             <% } %>
                         <% } %>
                     </tbody>
                 </table>
             </div>
         </div>
-    </body>
-</html>
+      </section>
+</body>
+</html>            
+            
