--- a/views/formcreateusuario.ejs
+++ b/views/formcreateusuario.ejs
@@ -21,22 +21,26 @@
             </nav>
         </div>
         <div class="body">
-            <form id="loginform" action="/updatecategoria/<%=dato%>">
+            <form id="loginform" action="/createusuario">
                 <fieldset>
-                    <legend>ACTUALIZANDO CATEGORIA</legend>
+                    <legend>CREANDO UN NUEVO USUARIO</legend>
                     <div id="contenedortabla">
                         <table>
                             <tr>
-                                <th><label for="nombre">Nombre</label></th>
-                                <th><label for="descripcion">Descripcion</label></th>
+                                <th><label for="id_us">ID USUARIO</label></th>
+                                <th><label for="usuario">USUARIO</label></th>
+                                <th><label for="passwordd">PASSWORD</label></th>
+                                <th><label for="rol">ROL</label></th>
                             </tr>
                             <tbody>
                                 <tr>
-                                    <td><input type="text" name="nombre" id="nombre" placeholder="Nombre" required></td>
-                                    <td><input type="text" name="descripcion" id="descripcion" placeholder="Descripcion" required></td>
+                                    <td><input type="text" name="id_us" id="id_us" placeholder="ID USUARIO" required></td>
+                                    <td><input type="text" name="usuario" id="usuario" placeholder="USUARIO" required></td>
+                                    <td><input type="text" name="passwordd" id="passwordd" placeholder="PASSWORD" required></td>
+                                    <td><input type="text" name="rol" id="rol" placeholder="ROL" required></td>
                                 </tr>
                             </tbody>
-                            <tfoot><tr><td><button type="submit" id="create">Actualizar</button></td></tr></tfoot>
+                            <tfoot><tr><td><button type="submit" id="create">Agregar</button></td></tr></tfoot>
                         </table>
                     </div>
                 </fieldset>
