--- a/views/prueba.ejs
+++ b/views/prueba.ejs
@@ -12,7 +12,6 @@
     <section class="layout">
         <div id="sidebar">
             <nav id="menu">
-                <div class="login-box"><img class ="avatar" src="./sources/img/logo.png" alt ="logo de la ceiba"></div>
                 <ul><li><a href="/gousuario"><img class="icono" src="./sources/img/account_circle_user_icon_255531.png" alt="usuario">Usuarios</a></li></ul>
                 <ul><li><a href="/goproducto">Producto</a></li></ul>
                 <ul><li><a href="/gocategoria">Categoria</a></li></ul>
@@ -22,17 +21,18 @@
             <div id="contenedortabla">
 			<table>
 				<tr>
-					<th>#</th>
+					<th>ID PRODUCTO</th>
+					<th>ID CATEGORIA</th>
+					<th>ID PROVEEDOR</th>
 					<th>NOMBRE</th>
-					<th>CATEGORIA</th>
-					<th>DESCRIPCION</th>
-					<th>STOCK</th>
+					<th>CANTIDAD</th>
+					<th>VALOR</th>
 					<th><a href="/goformcreateproducto"><img src="./sources/img/circle_plus_icon_255898.png" alt="createcliente"></a></th>
 				</tr>
 				<tbody id="tablaproducto">
 					<% if (dato.length>0) { %>
 						<% for( let index = 0; index < dato.length; index++ ) { %>
-							<tr><td><%=dato[index].id_product %></td><td><%=dato[index].nombre %></td><td><%=dato[index].id_cat %></td><td><%=dato[index].descripcion%></td><td><%=dato[index].cantidad%></td><td><a class="edit" href="/goformupdateproducto/<%=dato[index].id_product%>"><img src="./sources/img/edit_icon_255891.png" alt="update"></a><a class="edit" href="/deleteproducto/<%=dato[index].id_product%>"><img src="./sources/img/remove_delete_trash_icon_255976.png" alt="delete"></a></td></tr>
+							<tr><td><%=dato[index].id_producto %></td><td><%=dato[index].id_cat %></td><td><%= dato[index].id_prov %></td><td><%=dato[index].nombre %></td><td><%=dato[index].cantidad%></td><td><%=dato[index].valor%></td><td><a href="/goformupdateproducto/<%=dato[index].id_producto%>"><img src="./sources/img/edit_icon_255891.png" alt="update"></a></td><td><a href="/deleteproducto/<%=dato[index].id_producto%>"><img src="./sources/img/remove_delete_trash_icon_255976.png" alt="delete"></a></td></tr>
 						<% } %>
 					<% } %>
 				</tbody>
