--- a/views/usuario.ejs
+++ b/views/usuario.ejs
@@ -1,65 +1,41 @@
-<!doctype html>
-<html lang="es">
-    <head>
-        <meta charset="utf-8">
-        <title>La Ceiba</title>    
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Videojuegos & Desarrollo">
-        <meta name="description" content="Ejemplo de formulario de acceso basado en HTML5 y CSS">
-        <meta name="keywords" content="login,formulariode acceso html">
-        <link rel="shortcut icon" href="/sources/img/icons8-oak-tree-16.png" type="image/x-icon">
-        <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="../sources/css/cliente.css">
-    </head>
-    <body>
-        <div id="contenedor">
-            <div id="contenedorcentrado">
-                <div id="login">
-                    <form id="loginform">
-                        <fieldset>
-                            <div class="divinput">
-                                <label for="id_us">ID USUARIO</label>
-                                <input type="text" name="id_us" id="id_us" placeholder="ID USUARIO" required>
-                            </div>
-                            <div class="divinput">
-                                <label for="usuario">USUARIO</label>
-                                <input type="text" name="usuario" id="usuario" placeholder="USUARIO" required>
-                            </div>
-                            <div class="divinput">
-                                <label for="passwordd">PASSWORD</label>
-                                <input type="text" name="passwordd" id="passwordd" placeholder="PASSWORD" required>
-                            </div>
-                            <div class="divinput">
-                                <label for="rol">ROL</label>
-                                <input type="text" name="rol" id="rol" placeholder="ROL" required>
-                            </div>
-                            <div class="divbutton">
-                                <button type="button" id="create" onclick="">Create</button>
-                                <button type="button" id="read" onclick="">Read</button>
-                                <button type="button" id="update" onclick="">Update</button>
-                                <button type="button" id="delete" onclick="">Delete</button>
-                                <button type="button" id="buscar" onclick="">Buscar</button>
-                            </div>
-                        </fieldset>
-                    </form>
-                </div>
-            </div>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Page Title</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./sources/css/main.css'>
+    <script src='main.js'></script>
+</head>
+<body>
+<section class="layout">
+        <div id="sidebar">
+            <nav id="menu">
+                <div class="login-box"><img class ="avatar" src="./sources/img/logo.png" alt ="logo de la ceiba"></div>
+                <ul><li><a href="/gousuario"><img class="icono" src="./sources/img/account_circle_user_icon_255531.png" alt="usuario">Usuarios</a></li></ul>
+                <ul><li><a href="/goproducto">Producto</a></li></ul>
+                <ul><li><a href="/gocategoria">Categoria</a></li></ul>
+            </nav>
+        </div>
+        <div class="body">
             <div id="contenedortabla">
                 <table>
                     <tr>
-                        <th>ID SALIDA</th>
-                        <th>ID CLIENTE</th>
-                        <th>FECHA</th>
+                        <th>#</th>
+                        <th>USUARIO</th>
+                        <th><a href="/goformcreateusuario"><img src="./sources/img/circle_plus_icon_255898.png" alt="goformcreateusuario"></a></th>
                     </tr>
                     <tbody id="tablasalida">
                         <% if (dato.length>0) { %>
                             <% for( let index = 0; index < dato.length; index++ ) { %>
-                                <tr><td><%=dato[index].id_salida%></td><td><%=dato[index].cliente%></td><td><%= dato[index].fecha %></td></tr>
+                                <tr><td><%=dato[index].id_us%></td><td><%=dato[index].usuario%></td></td><td><a class="edit" href="/goformupdateusuario/<%=dato[index].id_us%>"><img src="./sources/img/edit_icon_255891.png" alt="updatecategoria"></a><a class="edit" href="/deleteusuario/<%=dato[index].id_us%>"><img src="./sources/img/remove_delete_trash_icon_255976.png" alt="deletecategoria"></a></td></tr>
                             <% } %>
                         <% } %>
                     </tbody>
                 </table>
             </div>
         </div>
-    </body>
+      </section>
+</body>
 </html>
