--- a/views/categorias.ejs
+++ b/views/categorias.ejs
@@ -30,7 +30,7 @@
                     <tbody id="tablacategoria">
                         <% if (dato.length>0) { %>
                             <% for( let index = 0; index < dato.length; index++ ) { %>
-                                <tr><td><%=dato[index].id_cat%></td><td><%=dato[index].nombre%></td><td><%= dato[index].Descripcion %></td><td><a class="edit" href="/goformupdatecategoria/<%=dato[index].id_cat%>"><img src="./sources/img/edit_icon_255891.png" alt="updatecategoria"></a><a class="edit" href="/deletecategoria/<%=dato[index].id_cat%>"><img src="./sources/img/remove_delete_trash_icon_255976.png" alt="deletecategoria"></a></td></tr>
+                                <tr><td><%=dato[index].id_cat%></td><td><%=dato[index].nombre%></td><td><%= dato[index].descripcion %></td><td><a class="edit" href="/goformupdatecategoria/<%=dato[index].id_cat%>"><img src="./sources/img/edit_icon_255891.png" alt="updatecategoria"></a><a class="edit" href="/deletecategoria/<%=dato[index].id_cat%>"><img src="./sources/img/remove_delete_trash_icon_255976.png" alt="deletecategoria"></a></td></tr>
                             <% } %>
                         <% } %>
                     </tbody>
