--- a/views/formupdateproducto.ejs
+++ b/views/formupdateproducto.ejs
@@ -3,7 +3,8 @@
 <head>
 	<meta charset='utf-8'>
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
-	<title>Page Title</title>
+	<title>La Ceiba</title>
+    <link rel="shortcut icon" href="/sources/img/icons8-oak-tree-16.png" type="image/x-icon">
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
 	<link rel='stylesheet' type='text/css' media='screen' href='../sources/css/main.css'>
 	<script src='main.js'></script>
