--- a/views/categorias.ejs
+++ b/views/categorias.ejs
@@ -20,6 +20,7 @@
             </nav>
         </div>
         <div class="body">
+            <legend>Categoria</legend>
             <div id="contenedortabla">
                 <table>
                     <tr>
