--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -20,6 +20,7 @@
             </nav>
         </div>
         <div class="body">
+            <legend>Producto</legend>
             <div id="contenedortabla">
 			<table>
 				<tr>
